# tensorflow

tensorflow/lite/: CMakeLists.txt  minimal_logging.cc
tensorflow/lite/tools/cmake/modules/: clog.cmake  cpuinfo.cmake  flatbuffers.cmake  xnnpack.cmake
tensorflow/lite/tools/cmake/modules/ruy/: CMakeLists.txt
